test/corpus/declarations.txt
================================================================================
Variable declaration
================================================================================

var Score:int = 0

--------------------------------------------------------------------------------

(source_file
  (var_declaration
    name: (identifier)
    type: (builtin_type)
    value: (integer_literal)))

================================================================================
Variable declaration without initializer
================================================================================

var Name:string

--------------------------------------------------------------------------------

(source_file
  (var_declaration
    name: (identifier)
    type: (builtin_type)))

================================================================================
Constant definition
================================================================================

MaxHealth := 100

--------------------------------------------------------------------------------

(source_file
  (type_definition
    name: (identifier)
    value: (integer_literal)))

================================================================================
Set statement
================================================================================

set Score = Score + 10

--------------------------------------------------------------------------------

(source_file
  (set_statement
    target: (identifier)
    value: (binary_expression
      left: (identifier)
      right: (integer_literal))))

================================================================================
Set with compound assignment
================================================================================

set Score += 50

--------------------------------------------------------------------------------

(source_file
  (set_statement
    target: (identifier)
    value: (integer_literal)))

================================================================================
Using declaration
================================================================================

using { /Verse.org/Verse }

--------------------------------------------------------------------------------

(source_file
  (using_declaration
    (module_path)))
